--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=false
 ## Liquibase properties
 spring.liquibase.changeLog=classpath:/liquibase/liquibase-changeLog.xml
 spring.liquibase.enabled=true
+
+server.forward-headers-strategy=FRAMEWORK
